...

class CreateTodoDialog extends StatelessWidget {
  const CreateTodoDialog({Key? key}) : super(key: key);

  @override
  Widget build(BuildContext context) {
    return DialogWrapper(title: "Create Todo", child: _buildChild(context));
  }

  Widget _buildChild(BuildContext context) {
    TextEditingController _textController = TextEditingController();
    ;
    return Column(
...
